--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,8 @@ encoding//src/main/resources/templates/full-layout.html=UTF-8
 encoding//src/main/resources/templates/head.html=UTF-8
 encoding//src/main/resources/templates/header.html=UTF-8
 encoding//src/main/resources/templates/left.html=UTF-8
+encoding//src/main/resources/templates/user/role-list.html=UTF-8
+encoding//src/main/resources/templates/user/user-edit.html=UTF-8
 encoding//src/main/resources/templates/user/user-list.html=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
