--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,6 @@
 			<artifactId>spring-security-cas</artifactId>
 			<version>4.2.2.RELEASE</version>
 		</dependency>
- 		
-	 	<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency> -->
 
 		 <dependency>
 	     	 <groupId>org.springframework.boot</groupId>
@@ -67,6 +62,12 @@
             <artifactId>fastjson</artifactId>  
             <version>1.1.29</version>  
         </dependency> 
+        
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+           <version>1.1.5</version>
+        </dependency>
 		        
   	</dependencies>
   	
