--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/resources/static/css/public/public.css=UTF-8
 encoding//src/main/resources/templates/article/article-list.html=UTF-8
 encoding//src/main/resources/templates/footer.html=UTF-8
 encoding//src/main/resources/templates/full-layout.html=UTF-8
@@ -9,6 +10,7 @@ encoding//src/main/resources/templates/header.html=UTF-8
 encoding//src/main/resources/templates/left.html=UTF-8
 encoding//src/main/resources/templates/monitor/monitor-log.html=UTF-8
 encoding//src/main/resources/templates/user/role-list.html=UTF-8
+encoding//src/main/resources/templates/user/user-add.html=UTF-8
 encoding//src/main/resources/templates/user/user-list.html=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
